--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1431,8 +1431,8 @@
 	
 <h4>Other information</h4>		
  
- <li class="code-num"><details><summary id="cd_30">Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
-            <p>Report the total amount of the board and lodging paid your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+ <li class="code-num"><details><summary>Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
+            <p  id="cd_30">Report the total amount of the board and lodging paid your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Member of the clergy or of a religious order</dt>
@@ -1445,16 +1445,16 @@
 			</li>
 
 
-<li class="code-num"><details><summary id="cd_31">Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
-        <p >Report tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
+<li class="code-num"><details><summary>Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
+        <p id="cd_31">Report tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
  <p><strong>Do not </strong>report the <strong>tax-exempt </strong>benefit using box 14 or code 30.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
 
 
-<li class="code-num"><details><summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
-          <p>Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<li class="code-num"><details><summary>Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
+          <p id="cd_32">Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Medical travel assistance </dt>
@@ -1464,15 +1464,15 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary id="cd_33">Code 33 – Medical travel assistance <span class="label label-success">Good</span></summary> 
-            <p>Report the amount of the <strong>medical travel portion only</strong> you paid to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total amount of the travel benefit using <a href="#cd_32">code 32</a>.</p>
+<li class="code-num"><details><summary>Code 33 – Medical travel assistance <span class="label label-success">Good</span></summary> 
+            <p id="cd_33">Report the amount of the <strong>medical travel portion only</strong> you paid to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total amount of the travel benefit using <a href="#cd_32">code 32</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
 	
 
-<li class="code-num"><details> <summary id="cd_34">Code 34 – Personal use of employer's automobile or motor vehicle <span class="label label-info">Jeremiah</span></summary> 
-  <p>Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+<li class="code-num"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle <span class="label label-info">Jeremiah</span></summary> 
+  <p id="cd_34">Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Employee's use of their own vehicle </dt>
@@ -1489,8 +1489,8 @@
 </li>
 
 
-<li class="code-num"><details> <summary id="cd_36">Code 36 – <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans <span class="label label-info">Jeremiah</span></summary> 
-<p>Report the value of the interest-free and low interest benefit you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<li class="code-num"><details> <summary>Code 36 – <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans <span class="label label-info">Jeremiah</span></summary> 
+<p id="cd_36">Report the value of the interest-free and low interest benefit you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Forgiven or repayable awards</dt>
@@ -1502,8 +1502,8 @@
 </li>
 
 
-<li class="code-num"><details> <summary id="cd_38">Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
-<p>Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<li class="code-num"><details> <summary>Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
+<p id="cd_38">Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
@@ -1639,7 +1639,7 @@
             </details>
 </li>
 		
-<li class="code-num"><details><summary >Code 78 – Fishers&nbsp;– Gross income</summary> 
+<li class="code-num"><details><summary >Code 78 – Fishers – Gross income</summary> 
             <p id="cd_78">Enter code 78 and report the amount paid or payable to the fisher from the proceeds of a catch. </p>
             <p>You also need to report either the net partnership or owner amount using code 79 <strong>or </strong>the shareperson amount using code 80.</p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
@@ -1647,10 +1647,8 @@
             </details> 
 			</li>
 
-			<li class="code-num">
-            <details>
-            <summary id="cd_79">Code 79 – Fishers&nbsp;– Net partnership amount</summary> 
-            <p>Enter code 79 and the applicable amount if the fisher you are paying is a type 1 fisher.</p>
+<li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount</summary> 
+            <p id="cd_79">Enter code 79 and the applicable amount if the fisher you are paying is a type 1 fisher.</p>
             <p>Report the same amount that you reported in box 24 &ndash; EI insurable earnings (or in box 56 if the fisher in Quebec). </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
             <p>Learn more: <a href="#fish">Self-employed fishing income</a></p>
