--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -823,7 +823,23 @@ margin-left: 38px;
   <tbody>Content</tbody>
 </table>
 
-
+<div class="col-md-3">
+ <table class="table">
+ <caption class="wb-inv">Caption text</caption>
+   <thead>
+     <tr>
+      <th scope="col" class="col-sm-8">...</th>
+      <th scope="col" class="col-sm-4">...</th>
+    </tr>
+   </thead>
+   <tbody>
+    <tr>
+     <td>Test content</td>
+     <td>Test content</td>
+    </tr>
+   </tbody>
+ </table>
+</div>
 
 
 
