--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -823,23 +823,27 @@ margin-left: 38px;
   <tbody>Content</tbody>
 </table>
 
-<div class="col-md-3">
- <table class="table">
+
+ <table class="table table-bordered">
  <caption class="wb-inv">Caption text</caption>
    <thead>
      <tr>
-      <th scope="col" class="col-sm-8">...</th>
-      <th scope="col" class="col-sm-4">...</th>
+      <th>Heading 1</th>
+      <th>Heading 2</th>
     </tr>
    </thead>
    <tbody>
     <tr>
-     <td>Test content</td>
-     <td>Test content</td>
+     <td>Content 1</td>
+     <td>Content 2</td>
     </tr>
+	   <tr>
+<td>Second row of first column</td>
+<td>Second row of second column</td>
+</tr>
    </tbody>
  </table>
-</div>
+
 
 
 
