--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1432,11 +1432,11 @@
 <h4>Other information</h4>		
  
  <li class="code-num"><details><summary>Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
-            <p  id="cd_30">Report the total amount of the board and lodging paid your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+            <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>, and all other utilities not eligible using <a href="#cd_40">code 40</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Member of the clergy or of a religious order</dt>
-<dd><p>Report the amount for the housing benefit you paid to your employee who is a member of the clergy that is <strong>eligible </strong> part of your cost for those utilities (electricity, heat, water and sewer) using code 30 and all other utilities not eligible using <a href="#cd_40">code 40</a>. </p>
+<dd><p>Report the total value of the housing benefit you provided to your employee who is a member of the clergy that is <strong>eligible </strong> part of your cost for those utilities (electricity, heat, water and sewer) using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>, and all other utilities not eligible using <a href="#cd_40">code 40</a>. </p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/clergy.html">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a></p>
 </dd>
 </dl>
@@ -1446,15 +1446,15 @@
 
 
 <li class="code-num"><details><summary>Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
-        <p id="cd_31">Report tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
+        <p id="cd_31">Report the value of the tax-exempt board, lodging and housing benefit paid to your employee working at  special work sites using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
  <p><strong>Do not </strong>report the <strong>tax-exempt </strong>benefit using box 14 or code 30.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
 
 
-<li class="code-num"><details><summary>Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
-          <p id="cd_32">Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<li class="code-num"><details><summary>Code 32 – Travel in a prescribed zone <span class="label label-info">Jeremiah</span></summary> 
+          <p id="cd_32">Report the total value of the travel benefit you provided to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Medical travel assistance </dt>
@@ -1464,8 +1464,8 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 33 – Medical travel assistance <span class="label label-success">Good</span></summary> 
-            <p id="cd_33">Report the amount of the <strong>medical travel portion only</strong> you paid to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total amount of the travel benefit using <a href="#cd_32">code 32</a>.</p>
+<li class="code-num"><details><summary>Code 33 – Medical travel assistance <span class="label label-info">Jeremiah</span></summary> 
+            <p id="cd_33">Report the value of the <strong>medical travel portion only</strong> you provided to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total value of the travel benefit using <a href="#cd_32">code 32</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
@@ -1507,11 +1507,11 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
-<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01), also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01), also report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
 <dt> Security options deduction under 110(1)(d.1)</dt>
-<dd>If your employee is eligible for the option benefit deduction under 110(1)(d.1), also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d.1), also report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
 <dt> Employer makes election under 110(1.1)</dt>
-<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to  not claim the cash-out as an expense, also report the amount of the taxable benefit using <a href="#cd_86">code 86</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to  not claim the cash-out as an expense, also report the value of the taxable benefit using <a href="#cd_86">code 86</a></dd>
 </dl>   
   <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
   </details> 
@@ -1519,7 +1519,7 @@
 
 
 <li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) <span class="label label-info">Jeremiah</span></summary> 
-<p id="cd_39">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+<p id="cd_39">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
  <p><strong>Do not </strong>report this amount in box 14. </p>
   </details> 
 			</li>
@@ -1531,7 +1531,7 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 41 – Security options deduction – 110(1)(d.1) <span class="label label-info">Jeremiah</span></summary> 
-<p id="cd_41">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+<p id="cd_41">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
            <p><strong>Do not </strong>report this amount in box 14. </p>
   </details> 
 		</li>
@@ -1695,7 +1695,7 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 86 – Security options election <span class="label label-info">Jeremiah</span></summary> 
-            <p id="cd_86">Report the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to not claim the cash-out as an expense using code 86. If you report an amount in code 86, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+            <p id="cd_86">Report the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to not claim the cash-out as an expense using code 86. If you report an amount in code 86, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
    <p><strong>Do not </strong>report this amount in box 14. </p>
             </details> 
 			</li>
