--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -817,29 +817,24 @@ margin-left: 38px;
 <h2>Penalties for failing to file the return on time</h2>
       <p>There are significant penalties if you do not send your return and pay an amount you owe when it is due.</p>
 
-		 <table class="table table-bordered">
-<caption class="wb-inv">Caption text</caption>
-  <thead>Content</thead>
-  <tbody>Content</tbody>
-</table>
 
 
  <table class="table table-bordered">
  <caption class="wb-inv">Caption text</caption>
    <thead>
      <tr>
-      <th>Heading 1</th>
-      <th>Heading 2</th>
+      <th>Type of affected owner</th>
+      <th>Minimum penalty</th>
     </tr>
    </thead>
    <tbody>
     <tr>
-     <td>Content 1</td>
-     <td>Content 2</td>
+     <td>Individuals</td>
+     <td>$5,000</td>
     </tr>
 	   <tr>
-<td>Second row of first column</td>
-<td>Second row of second column</td>
+<td>Corporations</td>
+<td>$10,000</td>
 </tr>
    </tbody>
  </table>
