--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -859,17 +859,16 @@ margin-left: 38px;
 		 
 		 
 		 <h2>Keep your records</h2>
-        <p>If you are an affected owner of a residential property in Canada on <span class="nowrap">December 31</span>, you must file an Underused Housing Tax return for the residential property. You must also keep records to support the determination of your obligations and liabilities. Even if your ownership is exempt and you do not have to pay the tax, you must still keep records. If you claim an exemption but do not have adequate records to support that exemption, we <strong>may disallow</strong> it.</p>  
-		  <p>Every affected owner of a residential property must keep records to enable the determination of their obligations and liabilities under the UHTA. Generally, you must keep the records for six years from the end of the year to which they relate.</p>
+        <p>You must keep records to support the information you provide in your return. If you claim an exemption but do not have adequate records to support it, we may <strong>disallow</strong> it.</p>
+		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
 
-<p>If you are an affected owner of a residential property in Canada on December 31, you are required to keep records to enable the determination of your obligations and liabilities under the Underused Housing Tax Act. Unless otherwise authorized by the Minister, these records must be kept in Canada in English or French for a minimum of six years after the end of the calendar year to which they relate, or for any other period that may be prescribed</p>
-		 <p>Even if your ownership is exempt and you do not have to pay the tax, you must still keep records. If you do not have adequate records to support that your ownership of a residential property is exempt from the Underused Housing Tax for a calendar year, the CRA may disallow your exemption. </p>
-<p>The CRA is unable to provide a prescriptive list of records that an owner would have to keep as each property owner’s situation is unique. However, as an example, records to support the vacation property exemption could include (but are not limited to) a diary of the days the owner used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days. The owner may also consider keeping any invoices, receipts, or statements for the purchase of goods and services that support or provide evidence of their occupation of the residential property for the 28 days in question.</p>
-		 
-
-
-
-
+<details>
+	<summary>Example - Vacation property exemption</summary>
+	<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
+	<p>However, some examples to support the vacation property exemption could include: </p>
+	<ul><li>A diary of the days the owner used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner lived at the property for the 28 day period</li></ul>
+</details>
 		
 		 
 		 
