--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1714,13 +1714,15 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
- <p id="cd_88">Report tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using box 29.</p>
+<li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
+ <p id="cd_88">Report <strong>only</strong> tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using box 29.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span></dt>
-<dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
+<dt>Partly tax-exempt </dt>
+<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> use the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dt>Fully taxable</dt>
+<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
