--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1592,14 +1592,14 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
- <p id="cd_69">Report tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
+<li class="code-num"><details><summary>Code 69 – Indian (exempt income) – Non-eligible retiring allowances  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
+ <p id="cd_69">Report <strong>only</strong> tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p>Report non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 for  amounts that are partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for amounts that are partly taxable.</dd>
-<dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><p>Report <strong>only</strong> tax exempt non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable amount using <a href="#cd_67">code 67</a>.</dd>
+<dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
@@ -1607,14 +1607,18 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 71 – Indian (exempt income) – Employment <span class="label label-info">Jeremiah</span></summary>
-       <p id="cd_71">Report tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
+       <p id="cd_71">Report <strong>only</strong> tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
+  
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd>If you pay taxable or partly tax-exempt employment income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
+<dt>Partly tax-exempt </dt>
+<dd>Report <strong>only</strong> tax-exempt income using code 71 <strong>and</strong> the taxable income using <a href="#bx_14">box 14</a>.</dd>
+<dt>Fully taxable</dt>
+<dd><strong>Do not</strong> report fully taxable income using code 71, use <a href="#bx_14">box 14</a>.</dd>
 </dl>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+ 
             </details> 
 			</li>
 
@@ -1720,7 +1724,7 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> use the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
 <dt>Fully taxable</dt>
 <dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
 </dl>
