--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1341,7 +1341,7 @@
 		<li class="code-num">
 		    <details>
             <summary>Box 50&nbsp;– RPP or DPSP registration number <span class="label label-info">Jeremiah</span></summary>
-         <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using box <a href="#bx_52">box 52</a>.</p> 
+         <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#bx_52">box 52</a>.</p> 
 
 <p>You have to report the plan number even if your plan requires only employer contributions.</p>
 
@@ -1719,14 +1719,14 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
- <p id="cd_88">Report <strong>only</strong> tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using box 29.</p>
+ <p id="cd_88">Report <strong>only</strong> tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_26">box 26</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered in box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
 <dt>Fully taxable</dt>
-<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered using box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered in box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
