--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1705,14 +1705,14 @@
 			</li>
 
 <li class="code-num"><details><summary>Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
-	<p id="cd_87">Report tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
+	<p id="cd_87">Report <strong>only</strong> tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
-<dd><strong>Do not </strong>report taxable employment income ($1,000 or more) you paid to your employee who is an emergency volunteer using code 87, use <a href="#bx_14">box 14</a>.  </dd>
-<dt>Other than volunteer</dt>
-<dd><strong>Do not </strong>report the employment income if the individual other than as a volunteer has the same or similar duties using code 87, use <a href="#bx_14">box 14</a>.  </dd>
+<dd>Report <strong>only </strong> tax-exempt employment income (up to $1,000) using code 87 <strong>and</strong> the taxable employment income ($1,000 or more) using <a href="#bx_14">box 14</a>.  </dd>
+<dt>Person does not meet all conditions for the exemption</dt>
+<dd><strong>Do not </strong>report the employment income if your employee <strong>does not</strong> meet all conditions for the exemption using code 87, use <a href="#bx_14">box 14</a>.</dd>
 </dl>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>
             </details> 
