--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -863,7 +863,7 @@ margin-left: 38px;
 		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
 
 <details>
-	<summary>Example - Vacation property exemption</summary>
+	<summary class="mrgn-tp-md">Example - Vacation property exemption</summary>
 	<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
 	<p>However, some examples to support the vacation property exemption could include: </p>
 	<ul><li>A diary of the days the owner used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
