detailed info to bullets

--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -848,7 +848,11 @@ margin-left: 38px;
 
 
 		 
-		 <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn3/filing-return-paying-underused-housing-tax.html#_Toc121913351">Penalties for failing to file a return</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a>.</p>
+		 <p>For more detailed information, refer to:</p>
+		<ul><li> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn3/filing-return-paying-underused-housing-tax.html#_Toc121913351">Penalties for failing to file a return</a></li></ul>	 
+		 <ul><li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a></li></ul>
+		 
+	
 		 
 
 		  
