--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -806,7 +806,7 @@ margin-left: 38px;
 
 	<h2>Penalties and interest exceptions for 2022</h2>
 		 <p>Penalties and interest will be waived if send your return and pay any amounts you owe by <strong>October 31, 2023</strong>.</p>
-<p>The <mark>cut-off date</mark> for making any elections for 2022 is also <strong>October 31, 2023</strong>. You make your elections within your Underused Housing Tax return.</p>
+<p>The deadline for making any elections for 2022 is also <strong>October 31, 2023</strong>. You make your elections within your Underused Housing Tax return.</p>
 
 <p>If you have elected to use the fair market value (FMV) for a residential property for 2022, the FMV must have been established between <strong>January 1, 2022 and April 30, 2023</strong>.</p>
 
