--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -68,7 +68,10 @@
                <h1 class="gc-thickline mrgn-tp-0">Adoption expenses - Lines 31300 and 58330</h1>
                <div class="row">
                   <div class="col-md-8">
-                   <!--  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+                   <ul class="fa-ul small list-unstyled">
+				   <li><span class="far fa-list-alt text-muted fa-li"></span> <strong>Federal tax return: Line 31300</strong></li>
+				   <li><span class="far fa-list-alt text-muted fa-li"></span> <strong>Provincial or territorial tax return: Line 58330</strong></li>
+				   </ul>
 					 <p>You can claim an amount for eligible adoption expenses related to the adoption of a child.</p>
 					 
 					
