--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1013,7 +1013,7 @@
 
   <details><summary>11 - Placement or employment agency workers</summary>
             <div id="ajax-agency1">
-            <p id="agency">Use code 11 if the following apply:</p>
+            <p id="11">Use code 11 if the following apply:</p>
  <ul>
             <li>You are an agency's client </li>
             <li>The agency placed a worker under your direction and control </li>
@@ -1027,7 +1027,7 @@
 
       <details><summary>12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</summary>
                <div id="ajax-self1">
-                  <p id="self">If the worker is <strong>self-employed</strong>:</p>
+                  <p id="12">If the worker is <strong>self-employed</strong>:</p>
                   <ul>
                      <li>they are responsible for their own CPP and income tax </li>
                      <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
@@ -1037,7 +1037,7 @@
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
                <div id="ajax-self2">
-                  <p id="self2">If the worker is <strong>self-employed</strong>:</p>
+                  <p id="13">If the worker is <strong>self-employed</strong>:</p>
                   <ul>
                      <li>they are responsible for their own CPP and income tax </li>
                      <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
@@ -1047,7 +1047,7 @@
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
             <div id="ajax-defer1">
-            <p id="defer">A salary deferral arrangement is a plan or arrangement made between an employee and an employer. Under such an arrangement, an employee postpones receiving salary and wages to a later year. Treat the deferred salary and wages as employment income in the year the employee <strong>earns </strong>the amount. Report it on the employee's T4 slip for that year.</p>
+            <p id="14">A salary deferral arrangement is a plan or arrangement made between an employee and an employer. Under such an arrangement, an employee postpones receiving salary and wages to a later year. Treat the deferred salary and wages as employment income in the year the employee <strong>earns </strong>the amount. Report it on the employee's T4 slip for that year.</p>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Prescribed salary deferral plans or arrangements</a></p>
             <h4 id="h_prescribed">Prescribed plans or arrangements</h4>
             <p>Prescribed plans or arrangements are not covered by the above salary deferral rules. Treat the deferred amounts in these cases as income in the year the employee <strong>receives </strong>them. Report the income on the employee's T4 slip for that year.</p>
@@ -1058,14 +1058,14 @@
     <details><summary>15 - Seasonal Agricultural Workers Program</summary>
             <div id="ajax-agri1">
             
-             <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4004/seasonal-agricultural-workers-program.html#P185_18674">Guide RC4004, Seasonal Agricultural Workers Program</a></p>
+             <p id="15">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4004/seasonal-agricultural-workers-program.html#P185_18674">Guide RC4004, Seasonal Agricultural Workers Program</a></p>
             </div>
             </details>
 
 
   <details> <summary>16 - Detached employee – Social security agreement</summary>
             <div id="ajax-outside1">
-            <p>In situations where you pay CPP on behalf of your employee who is working outside Canada, for all or part of the year, you have to prepare a T4 slip.</p>
+            <p id="16">In situations where you pay CPP on behalf of your employee who is working outside Canada, for all or part of the year, you have to prepare a T4 slip.</p>
             <p>See box 10 and box 29 for specific instructions.</p>
             <h4 id="h_0_1">Detached employees</h4>
             <p>When CPP is paid by the employer on behalf of <strong>detached employees </strong>under employment code 16, leave box 14 blank if no other type of income is reported. Fill in boxes 16 and 26 with the appropriate amounts and leave boxes 18 and 24 blank.</p>
@@ -1074,7 +1074,7 @@
 
      <details><summary>17 - Self-employed fishing income</summary>
                <div id="ajax-fish1">
-                  <p id="fish">Fishing income is reported on a T4 slip. If you paid:</p>
+                  <p id="17">Fishing income is reported on a T4 slip. If you paid:</p>
                   <ul>
                      <li>the worker both self-employed and employment income, and are reporting both on the same T4 slip, use the regular instructions for the portion that is employment income. </li>
                      <li>tax-exempt fishing income to a self-employed Indian, see <a href="#indian1">Indians employees</a>. </li>
@@ -1094,7 +1094,7 @@
 
 <details><summary>12, 13 or 17 - Indians who are self-employed</summary>
             <div id="ajax-indian22">
-            <p id="indian2">We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we use the term Indian because it has a legal meaning in the Indian Act.</p>
+            <p id="codeindian">We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we use the term Indian because it has a legal meaning in the Indian Act.</p>
             <p>Payments you made to an Indian who is not your employee may be taxable, tax-exempt, or partly tax-exempt.</p>
             <ul>
             <li id="h_2_1"><strong>Taxable or partly tax-exempt self-employment income</strong>
@@ -1520,21 +1520,21 @@
 	
 <li class="code-num"><details><summary>Code 81 – Placement or employment agency worker – Gross income <span class="label label-info">Jeremiah</span></summary> 
           
- <p id="cd_81">Report the gross income you paid to a placement or employment agency worker using code 81. If you report an amount in code 81, you have to enter the employment code 11 using <a href="#bx_29">box 29</a>.</p>
+ <p id="cd_81">Report the gross income you paid to a self-employed placement or employment agency worker using code 81. If you report an amount in code 81, you have to enter the employment code 11 using <a href="#11">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
              </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income</summary> 
-<p id="cd_82">Report the amount of gross earnings of the worker using <strong>code 82 </strong>for taxi drivers and drivers of other passenger-carrying vehicles</p>
+<li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income <span class="label label-info">Jeremiah</span></summary> 
+<p id="cd_82">Report the gross income you paid to a self-employed taxi drivers and drivers of other passenger-carrying vehicles using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
  <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
             </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income</summary> 
-<p id="cd_83">Report the amount of gross earnings of the worker using <strong>code 83 </strong>for barbers or hairdressers </p>
-            <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
+<li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income <span class="label label-info">Jeremiah</span></summary> 
+<p id="cd_83">Report the gross income you paid to a self-employed barbers or hairdressers using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#13">box 29</a>.</p>
+ <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
             </details> 
 			</li>
 
@@ -1571,9 +1571,9 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered in box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered in box 29: <a href="#11">code 11</a>, <a href="#13">code 13</a> or <a href="#17">code 17</a>.</dd>
 <dt>Fully taxable</dt>
-<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered in box 29: <a href="#cd_11">code 11</a>, <a href="#cd_13">code 13</a> or <a href="#cd_17">code 17</a>.</dd>
+<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered in box 29: <a href="#11">code 11</a>, <a href="#13">code 13</a> or <a href="#17">code 17</a>.</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
