--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1548,10 +1548,12 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans</summary> 
- <p id="cd_85">Enter code 85 and report the amounts that the <strong>employee paid</strong>. The use of code 85 is optional. However, if you do not use this code, the CRA may ask the employee to provide supporting documents.</p>
-		    <p>Employee-paid premiums to a private health services plan are considered qualifying medical expenses and can be claimed by the employee on their income tax and benefit return. </p>
-		    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Premium paid to private health services plan (PHSP)</a></p>
+<li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans <span class="label label-info">Jeremiah</span></summary> 
+ <p id="cd_85">Report the premiums that your employee paid to a private health services plans using code 85.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
+<p>The use of code 85 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
+ <p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>
             </details> 
 			</li>
 
