--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1511,17 +1511,24 @@
 
 <li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-          <p>Report the same amount that you reported in box 24 &ndash; EI insurable earnings (or in box 56 if the fisher in Quebec). </p>
-            <p><strong>Do not </strong>report this amount in box 14.</p>
+<p>Also report the same amount using one of the following box:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="#bx_24">box 24</a> if the fisher worked in a province other than Quebec </li>
+<li class="cnjnctn-col"><a href="#bx_56">box 56</a> if the fisher worked in Quebec</li>
+</ul>
+  <p><strong>Do not </strong>report this amount in box 14.</p>
            
             </details> 
 			</li>
 
 <li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-            <p>Report the same amount that you reported in box 24 &ndash; EI insurable earnings (or in box 56 if the fisher in Quebec). </p>
-            <p><strong>Do not </strong>report this amount in box 14.</p>
-            <p>Learn more: <a href="#fish">Self-employed fishing income</a></p>
+           <p>Also report the same amount using one of the following box:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="#bx_24">box 24</a> if the fisher worked in a province other than Quebec </li>
+<li class="cnjnctn-col"><a href="#bx_56">box 56</a> if the fisher worked in Quebec</li>
+</ul>
+ <p><strong>Do not </strong>report this amount in box 14.</p>
             </details> 
 			</li>
 	
