--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1497,11 +1497,11 @@
 </li>
 		
 <li class="code-num"><details><summary >Code 78 – Fishers – Gross income <span class="label label-info">Jeremiah</span></summary> 
-            <p id="cd_78">Report the gross income you paid to a fisher using code 78. If you report an amount in code 78, you have to: </p>
-<ul>
-<li>Enter the employment code 17 using <a href="#17">box 29</a></li>
-<li>Report the net partnership amount if the fisher is a type 1 using <a href="#cd_79">code 79</a></li>
-<li>Report the shareperson amount if if the fisher is a type 2 using <a href="#cd_80">code 80</a></li>
+            <p id="cd_78">Report the gross income you paid to a fisher using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
+<p>Also report using:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="#cd_79">code 79</a> if the fisher is a type 1 to report net partnership amount </li>
+<li class="cnjnctn-col"><a href="#cd_80">code 80</a> if the fisher is a type 2 to report the shareperson amount  </li>
 
 			</ul>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
@@ -1511,7 +1511,7 @@
 
 <li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-<p>Also report the same amount using one of the following box:</p>
+<p>Also report the same amount using:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#bx_24">box 24</a> if the fisher worked in a province other than Quebec </li>
 <li class="cnjnctn-col"><a href="#bx_56">box 56</a> if the fisher worked in Quebec</li>
