--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1485,14 +1485,16 @@
             </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 77 – Workers' compensation benefits repaid to the employer</summary> 
-            <p id="cd_77">Report the amount of workers' compensation benefits repaid to the employer that was previously included in the employee's employment income (box 14 of the T4 slip). This allows an employee to claim a corresponding deduction as other employment expenses on their income tax and benefit returns. </p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Workers' compensation claims</a></p>
-            <h4>Ontario COVID-19 Worker Income Protection Benefit </h4>
-            <p>On April 29, 2021, the Ontario COVID-19 Worker Income Protection Benefit at <a href="https://www.ontario.ca/page/covid-19-worker-income-protection-benefit">Ontario COVID-19 Worker Income Protection Benefit</a> came into effect and the <a href="https://www.ontario.ca/laws/statute/00e41">Employment Standards Act, 2000</a> was amended. Employers must provide employees with up to three days of paid infectious disease emergency leave if they miss work for certain reasons related to COVID-19. </p>
-            <p>Amounts paid to an employee as a result of this program are employment income and have the same withholding requirements. </p>
-            <p><strong>For tax year 2021</strong>, you need to report this amount in box 14.</p>
-            <p><strong>Do not </strong>use code 77 to report these amounts.</p>
+<li class="code-num"><details> <summary>Code 77 – Workers' compensation benefits repaid to the employer <span class="label label-info">Jeremiah</span></summary> 
+            <p id="cd_77">Report the amount of workers' compensation benefits using code 77 where:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">You previously paid your employee the workers' compensation amount and you reported it as an employment income on their T4 slip</li>
+<li class="cnjnctn-col">You were reimbursed by the workers' compensation board (WCB) for the worker's compensation amount you paid to your employee </li>
+</ul>
+<p> This allows your employee to claim a deduction as other employment expenses on their income tax and benefit returns. </p>
+<p><strong>Do not </strong>report this amount in box 14.</p>    
+    <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/wcb.html">Payments related to workers' compensation claims</a></p>
+         
             </details>
 </li>
 		
@@ -1557,8 +1559,8 @@
 
 <li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans <span class="label label-info">Jeremiah</span></summary> 
  <p id="cd_85">Report the premiums that your employee paid to a private health services plans using code 85.</p>
-<p><strong>Do not </strong>report this amount in box 14.</p>
 <p>The use of code 85 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
  <p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return.</p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>
             </details> 
