--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1134,7 +1134,7 @@
             <p>Learn more: <a href="/en/revenue-agency/services/forms-publications/publications/it103r.html">Interpretation Bulletin IT-103R, Dues paid to a union or to a parity or advisory committee</a></p>
            
 
-<h4>Specific situation</h4>
+<h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
@@ -1242,7 +1242,7 @@
             <details>
             <summary id="bx_55">Box 55&nbsp;– Employee's PPIP premiums</summary>
             <p>If your employee worked in Quebec, report their provincial parental insurance plan (PPIP) premiums that you deducted.</p>
-  <h4>Specific situation</h4>
+  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
@@ -1267,7 +1267,7 @@
             <li>The insurable earnings are more than the maximum for the year </li>
             </ul>
 
-  <h4>Specific situation</h4>
+  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
@@ -1358,7 +1358,7 @@
 
 <li class="code-num"><details> <summary>Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_38">Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
 <dd>If your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01), also report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
@@ -1421,7 +1421,7 @@
 <li class="code-num"><details><summary>Code 66 – Eligible retiring allowances <span class="label label-success">Good</span></summary> 
 <p  id="cd_66">Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using code 66, use <a href="#cd_69">code 69</a>.</dd>
@@ -1435,7 +1435,7 @@
 <li class="code-num"><details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances <span class="label label-success">Good</span></summary> 
 <p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using code 67, use <a href="#cd_69">code 69</a>.</dd>
@@ -1449,7 +1449,7 @@
 <li class="code-num"><details><summary>Code 69 – Indian (exempt income) – Non-eligible retiring allowances  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
  <p id="cd_69">Report <strong>only</strong> tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p>Report <strong>only</strong> tax exempt non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable amount using <a href="#cd_67">code 67</a>.</dd>
@@ -1464,7 +1464,7 @@
        <p id="cd_71">Report <strong>only</strong> tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
   
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
 <dd>Report <strong>only</strong> tax-exempt income using code 71 <strong>and</strong> the taxable income using <a href="#bx_14">box 14</a>.</dd>
@@ -1502,7 +1502,7 @@
 <li class="code-num"><details><summary >Code 78 – Fishers – Gross income <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_78">Report the gross income you paid to a fisher using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
 
-<h4>Specific situation</h4>
+<h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Type 1 fishers</dt>
 <dd>Also report the net partnership amount if the fisher is a type 1 using <a href="#cd_79">code 79</a></dd>
@@ -1518,7 +1518,7 @@
 <li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
 
-<h4>Specific situation</h4>
+<h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Fisher worked in a province other than Quebec</dt>
 <dd>Also report the same amount if the fisher worked in a province other than Quebec using <a href="#bx_24">box 24</a> </dd>
@@ -1532,7 +1532,7 @@
 
 <li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-           <h4>Specific situation</h4>
+           <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Fisher worked in a province other than Quebec</dt>
 <dd>Also report the same amount if the fisher worked in a province other than Quebec using <a href="#bx_24">box 24</a> </dd>
@@ -1598,7 +1598,7 @@
 <li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
  <p id="cd_88">Report <strong>only</strong> tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_29">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
 <dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered in box 29: <a href="#11">code 11</a>, <a href="#13">code 13</a> or <a href="#17">code 17</a>.</dd>
