--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -784,7 +784,7 @@ html:lang(fr) .cnjnctn-or:before {
         <div class="wb-frmvld mrgn-bttm-xl">
           <form>
             <div class="wb-fieldflow gc-font-2019" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "hideelm": "#mail-centre",  "defaultselectedlabel": "Select your location", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "addClass", "source": "#mail-centre", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc", "class": "hidden", "live": true}]}'>
-              <p>Select the location where you reside, or where your corporation is physically located.</p>
+              <p>Select the location where you reside, or where your corporation is physically located</p>
             
                   <ul>
 		<li>Canada
