--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -752,7 +752,7 @@ html:lang(fr) .cnjnctn-or:before {
         <li><a href="who-file.html">Who must file a return and pay the tax</a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</a></li>
         <li><a href="complete-return.html">Complete the return</a></li>
-        <li class="active"><a aria-current="page" href="file-return.html">File the return</a></li>
+        <li class="active"><a aria-current="page">File the return</a></li>
         <li><a href="pay-tax.html">Pay the tax</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
