--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1438,10 +1438,10 @@
 
 <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Fisher worked in a province other than Quebec</dt>
-<dd>Also report the same amount if the fisher worked in a province other than Quebec using <a href="#bx_24">box 24</a> </dd>
-<dt>Fisher worked in the province of Quebec</dt>
-<dd>Also report the same amount if the fisher worked in the province of Quebec using <a href="#bx_56">box 56</a> </dd>
+<dt>Province of employment is other than Quebec</dt>
+<dd>Also report the same amount using <a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec. </dd>
+<dt>Province of employment is Quebec</dt>
+<dd>Also report the same amount using <a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec.</dd>
 </dl>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
            
@@ -1450,14 +1450,14 @@
 
 <li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
-           <h4>Specific situations</h4>
+          <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Fisher worked in a province other than Quebec</dt>
-<dd>Also report the same amount if the fisher worked in a province other than Quebec using <a href="#bx_24">box 24</a> </dd>
-<dt>Fisher worked in the province of Quebec</dt>
-<dd>Also report the same amount if the fisher worked in the province of Quebec using <a href="#bx_56">box 56</a> </dd>
+<dt>Province of employment is other than Quebec</dt>
+<dd>Also report the same amount using <a href="#bx_24">box 24</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in a province other than Quebec. </dd>
+<dt>Province of employment is Quebec</dt>
+<dd>Also report the same amount using <a href="#bx_56">box 56</a> if you enter in <a href="#bx_10">box 10</a> that the fisher worked in the province of Quebec.</dd>
 </dl>
-<p><strong>Do not </strong>report this amount in box 14.</p>  
+<p><strong>Do not </strong>report this amount in box 14.</p>
             </details> 
 			</li>
 	
